# vacant-lot

./: .dockerignore  .gitignore  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
cfg/yolo/: config.py  config.yaml  general.yaml
cfg/yolo/dataset/: coco.yaml  dev.yaml  mock.yaml  vacant-lot.yaml
cfg/yolo/model/: rd-9c.yaml  v7.yaml  v9-c-cls.yaml  v9-c-seg.yaml  v9-c.yaml  v9-m.yaml  v9-s.yaml  v9-t.yaml
cfg/yolo/task/: inference.yaml  train.yaml  validation.yaml
environments/: Dockerfile
notebooks/: bbox_cv_split.ipynb  create_yolo_datasets.ipynb  eda_segmentation.ipynb  srcdir.py  vacant-lot.xlsx
src/: infer_yolo.py  train_yolo.py
