[project]
name = "vacant-lot"
version = "0.1.0"
description = "Vacant Lot Detection and Segmentation"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.4.14",
    "h5py>=3.11.0",
    "lightning>=2.5.0",
    "markupsafe~=2.1",
    "matplotlib>=3.8.4",
    "numpy>=1.26.2",
    "opencv-python>=4.10.0.84",
    "polars>=0.20.23",
    "pyyaml>=6.0.1",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.2",
    "timm>=0.9.7",
    "torch==2.5.1+cu121",
    "torchvision>=0.20.1",
    "tqdm>=4.64",
    "scikit-image>=0.24.0",
    "segmentation-models-pytorch>=0.3.4",
    "imageio>=2.36.0",
    "iterative-stratification>=0.1.9",
    "yolo",
    "detectron2>=0.6",
]


[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
no-build-isolation-package = ["detectron2"]
dev-dependencies = [
    "ipywidgets>=8.1.2",
    "mlflow>=2.12.1",
    "notebook>=7.1.2",
]


[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2" }
yolo = { git = "https://github.com/WongKinYiu/YOLO.git" }
